# wanderstamp

./: .dockerignore  .gitignore  Dockerfile  README.md  auth.go  compose.example.yaml  db.go  geocode.go  go.mod  handlers.go  immich.go  main.go  packing.go  share.go
.github/workflows/: android.yml  docker.yml
app/: .gitignore  README.md  make-keystore.sh
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
static/: app.js  index.html  manifest.webmanifest  style.css  sw.js
